<resources>
    <string name="app_name">FigGeo</string>
    <string name="titulo">Figuras Geométricas</string>
    <string name="cubo">Cubo</string>
    <string name="cuadro">Cuadrado</string>
    <string name="circulo">Circulo</string>
    <string name="triangulo">Triangulo</string>
    <string name="perimetro">Perímetro:</string>
    <string name="area">Area:</string>
    <string name="volumen">Volumen:</string>
    <string name="arista">Arista</string>
    <string name="radio">Radio</string>
    <string name="lado">Lado</string>
    <string name="ancho">Ancho</string>
    <string name="alto">Alto</string>

</resources>
